- Hidden password when getting calendar tasks
